# twitter-emotion-classification

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
configs/: default.yaml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_models.ipynb  04_bert_fine_tuning.ipynb  05_evaluation.ipynb
scripts/: evaluate.sh  predict.py  train.py  train.sh
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  bert_classifier.py
src/training/: __init__.py  trainer.py  utils.py
